# alexandria

./: Alexandria.cabal  ChangeLog.md  README.md
app/: Main.hs
src/: Alexandria.hs  Build.hs  Package.hs  Parser.hs
