name:           Alexandria
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/NickPollard/alexandria#readme>
homepage:       https://github.com/NickPollard/alexandria#readme
bug-reports:    https://github.com/NickPollard/alexandria/issues
author:         Nick Pollard
maintainer:     nickedwardpollard@gmail.com
copyright:      2018 Nick Pollard
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/githubuser/Alexandria

library
  exposed-modules:
      Package
      Build
  other-modules:
      Paths_Alexandria
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5,
      aeson,
      containers,
      directory,
      extra,
      filepath,
      process,
      text,
      yaml
  default-language: Haskell2010

executable Alexandria-exe
  main-is: Main.hs
  other-modules:
      Paths_Alexandria
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      Alexandria
    , base >=4.7 && <5
  default-language: Haskell2010

test-suite Alexandria-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_Alexandria
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      Alexandria
    , base >=4.7 && <5
  default-language: Haskell2010
